--- a/views/layouts/partials/blog.handlebars
+++ b/views/layouts/partials/blog.handlebars
@@ -1,10 +1,8 @@
 <section class="container">
-  <h3 class="tech-blog">{{gallery.name}}</h3>
-  <h4>Opening Hour: {{format_time gallery.starting_date}}</h4>
-  <h4>Closing Hour: {{format_time gallery.ending_date}}</h4>
+  <h3 class="tech-blog">{{blog.name}}</h3>
   <section class="flex-row justify-center">
-    {{#each gallery.paintings as |painting|}}
-    {{> painting-details}}
+    {{#each blog.post as |post|}}
+    {{> post-details}}
     {{/each}}
   </section>
 </section>
