--- a/views/layouts/partials/post.handlebars
+++ b/views/layouts/partials/post.handlebars
@@ -1,8 +1,7 @@
-<section class="painting">
-  <img src="/images/{{painting.filename}}" alt="{{painting.description}}">
-  <div class="painting-details">
-    <h3>{{painting.title}}</h3>
-    <p>By: {{painting.artist}}</p>
-    <p>Exhibition open until: {{ format_date painting.exhibition_date}}</p>
+<section class="post">
+  <img src="/images/{{post.filename}}" alt="{{post.description}}">
+  <div class="post-details">
+    <h3>{{post.title}}</h3>
+    <p>Username: {{post.creator}}</p>
   </div>
 </section>
